# bm-akamai-encoding-samples

./: .gitignore  README.md  pyproject.toml
live/: create_live_rtmp_ingest_h264_crf_aac_fmp4_hls_dash.py  create_live_rtmp_ingest_h264_vbr_aac_fmp4_hls_dash.py  create_live_srt_ingest_av1_vbr_aac_fmp4_hls_dash.py  create_live_srt_ingest_h264_crf_aac_fmp4_hls_dash.py  create_live_srt_ingest_h264_vbr_aac_fmp4_hls_dash.py  create_live_srt_ingest_hevc_crf_aac_fmp4_hls_dash.py  create_live_srt_ingest_hevc_vbr_aac_fmp4_hls_dash.py
live/drm/: README.md  create_live_srt_ingest_h264_aac_fmp4_drm_cbc_hls_dash.py
live/failover/: README.md  create_live_rtmp_redundant_ingest_h264_vbr_aac_fmp4_hls_dash.py
live/low-latency/: README.md  create_live_srt_ingest_h264_aac_cmaf_ll_hls_dash.py
live/rtmp/: README.md  create_live_rtmp_ingest_h264_crf_aac_fmp4_hls_dash.py  create_live_rtmp_ingest_h264_vbr_aac_fmp4_hls_dash.py
live/scte35/: README.md  create_live_srt_ingest_h264_aac_ts_hls_with_scte35.py
live/srt/: README.md  create_live_srt_ingest_av1_vbr_aac_fmp4_hls_dash.py  create_live_srt_ingest_h264_crf_aac_fmp4_hls_dash.py  (+3 more)
vod/: create_vod_av1_aac_fmp4_hls_dash.py  create_vod_dolbyvision_dolbyatmos_adm_with_hls_dash_https_input.py  create_vod_dolbyvision_dolbyatmos_damf_with_hls_dash_https_input.py  create_vod_h264_aac_fmp4_drm_cbc_with_hls_dash_linote_object_storage_in_out.py  create_vod_h264_aac_fmp4_hls_dash.py  create_vod_h264_aac_ts_fmp4_hls_dash.py  create_vod_h265_aac_fmp4_hls_dash.py  create_vod_pertitle_h264_aac_fmp4_hls_dash.py  create_vod_vp9_webm_aac_fmp4_dash.py
(+14 files in other folders)
